2008-02-13  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Move get_resource_hash() to gupnp-av and rename accordingly.

2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:
	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:
	* src/av-cp/renderer-controls.c:

	Enable the user to clear the state of the currently selected renderer.
	This is useful in dealing with crapy renderers out there that don't
	emit LastChange events for state changes.

2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Refactor: put the state setting into a separate function.

2008-02-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:

	About dialog should have a '12' pixels wide border.

2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Fix a typo.
	- Pass arguments in correct order to ProtocolInfo comparison functions.
	- Implement comparison of extra field of ProtocolInfo.
	- Refer to the ProtocolInfo fields by terms used by UPnP AV specs.
	- Take wildcard into account when matching transport and content
	  format of ProtocolInfo.

2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	- Block the 'value-changed' signal handlers on the scales when the
	  value is changed by the application rather than user.
	- Correct the signature of "value-changed" signal handler.
	- Unit for 'Seek' is "ABS_TIME" rather than "TIME".
	- Refactor: Put the timeout adding code into a separare function.

2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Implement seeking.

2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Update the controls when the renderer selection changes.

2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/av-cp/renderer-controls.h:
